--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^9.4.2",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
+    "openai": "^6.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
